--- a/src/generic_ui/polymer/toolbar.html
+++ b/src/generic_ui/polymer/toolbar.html
@@ -8,8 +8,7 @@
       top: 0; left: 0;
       display: block;
       height: 50px; width: 100%;
-      // background: #94a7cf;
-      background: rgba(0,0,0,0.5);
+      background-color: #009688;
       z-index: 1000;
     }
     </style>
