--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -16,12 +16,9 @@
       -webkit-transition: all 0.23s !important;
       -moz-transition: all 0.23s !important;
       transition: all 0.23s !important;
-      right: -288px; top: 50px;
-      z-index: 10;
+      top: 50px;
       overflow-y: hidden;
       overflow-y: scroll;
-    }
-    :host(.active) {
       right: 0px;
       z-index: 100;
     }
