Make roster take 100% width

--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -10,7 +10,7 @@
       display: inline-block;
       box-sizing: border-box;
       height: 550px;
-      width: 340px;
+      width: 100%;
       border-left: 1px solid #ddd;
       background-color: white;
       -webkit-transition: all 0.23s !important;
