--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -1,38 +1,37 @@
 <link rel='import' href='../lib/polymer/polymer.html'>
-<link rel="import" href='button.html'>
-<link rel="import" href='description.html'>
+<link rel='import' href='../lib/paper-button/paper-button.html'>
+<link rel='import' href='button.html'>
+<link rel='import' href='description.html'>
 
 <polymer-element name='uproxy-splash' attributes=''>
   <template>
     <style>
     :host {
-      position: absolute;
       display: block;
       box-sizing: border-box;
       height: 100%; width: 100%;
       text-align: center;
-      padding-top: 200px;
-      font-size: 12px;
+      font-size: 14px;
       -webkit-transition: all 0.23s !important;
       -moz-transition: all 0.23s !important;
       transition: all 0.23s !important;
       right: -100%;
-      color: #999;
-    }
-    :host(.active) {
       right: 0px;
       z-index: 100;
+      line-height: 24px;
     }
     h1 {
-      font-size: 16px;
-      color: #666;
+      font-size: 18px;
+      color: #009688;  /* dark green */
     }
     #proxy-pic {
       opacity: 0.3;
     }
     .view {
       position: absolute;
-      padding: 32px;
+      width: 80%;
+      margin-left: 10%;
+      padding-top: 100px;
       opacity: 1;
       -webkit-transition: all 0.46s !important;
       -moz-transition: all 0.46s !important;
@@ -49,17 +48,31 @@
       bottom: 80px; left: 0;
       width: 100%;
     }
+    .smiley {
+      margin-bottom: 1em;
+    }
+    p {
+      margin-top: 2em;
+    }
     </style>
 
-    <div class='view' id='intro' hidden?='{{0!==state}}'>
-      <h1>Share your pathway to the Internet</h1>
+    <div class='view' id='intro1' hidden?='{{0!==state}}'>
+      <img class='smiley' src='../icons/smiley.png'>
+      <h1>uProxy</h1>
       <p>
-      uProxy helps users protect each other from third parties who may try to
-      watch, block, or redirect users' Internet connections.
+        uProxy helps you share your access to the internet or get internet
+        access from friends
       </p>
     </div>
 
-    <div class='view' id='description' hidden?='{{1!==state}}'>
+    <div class='view' id='getOrShare' hidden?='{{1!==state}}'>
+      <h1>How would you like to start?</h1>
+      <p>
+      <paper-button raised>Get access</paper-button>
+      </p>
+    </div>
+
+    <div class='view' id='description' hidden?='{{2!==state}}'>
       <h1>What name should others see when this device is online?</h1>
       <uproxy-description></uproxy-description>
       <p>
