--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -2,6 +2,8 @@
 <link rel='import' href='../lib/paper-button/paper-button.html'>
 <link rel='import' href='button.html'>
 <link rel='import' href='description.html'>
+<link rel='import' href='faq-link.html'>
+<link rel='import' href='network.html'>
 
 <polymer-element name='uproxy-splash' attributes=''>
   <template>
@@ -12,9 +14,6 @@
       height: 100%; width: 100%;
       text-align: center;
       font-size: 14px;
-      -webkit-transition: all 0.23s !important;
-      -moz-transition: all 0.23s !important;
-      transition: all 0.23s !important;
       right: -100%;
       right: 0px;
       z-index: 100;
@@ -48,10 +47,21 @@
       color: white;
       width: 150px;
     }
+    uproxy-network {
+      padding-bottom: 32px;
+    }
     #nextWrapper {
       position: absolute;
-      bottom: 80px; left: 0;
+      bottom: 120px; left: 0;
       width: 100%;
+    }
+    uproxy-faq-link {
+      position: absolute;
+      bottom: 1em; left: 0;
+      width: 100%;
+      padding-top: 1em;
+      border-top: 1px solid #ddd;
+      cursor: pointer;
     }
     .smiley {
       margin-bottom: 1em;
@@ -64,34 +74,67 @@
     }
     </style>
 
-    <div class='view' id='intro1' hidden?='{{0!==state}}'>
-      <img class='smiley' src='../icons/smiley.png'>
-      <h1>uProxy</h1>
-      <p>
-        uProxy helps you share your access to the internet or get internet
-        access from friends
-      </p>
+    <div id='intro1' hidden?='{{0!==state}}'>
+      <div class='view'>
+        <img class='smiley' src='../icons/smiley.png'>
+        <h1>uProxy</h1>
+        <p>
+          uProxy helps you share your access to the internet or get internet
+          access from friends
+        </p>
+      </div>
+      <uproxy-faq-link anchor='LearnMore'>
+        LEARN MORE ABOUT UPROXY
+      </uproxy-faq-link>
     </div>
 
-    <div class='view' id='description' hidden?='{{1!==state}}'>
-      <h1>What name should others see when this device is online?</h1>
-      <uproxy-description></uproxy-description>
-      <p>
-      Giving this device a name will let others know how they are connecting
-      with you. It also means you can have more than one device with uProxy
-      installed and proxy from one to the other.
-      </p>
+    <div id='description' hidden?='{{1!==state}}'>
+      <div class='view'>
+        <h1>What name should others see when this device is online?</h1>
+        <uproxy-description></uproxy-description>
+        <p>
+        Giving this device a name will let others know how they are connecting
+        with you. It also means you can have more than one device with uProxy
+        installed and proxy from one to the other.
+        </p>
+      </div>
     </div>
 
-    <div class='view' id='getOrShare' hidden?='{{2!==state}}'>
-      <h1>How would you like to start?</h1>
-      <paper-button raised class='getShareButton'>Get access</paper-button>
-      <p>... if you need to get access from a friend</p>
-      <paper-button raised class='getShareButton'>Share access</paper-button>
-      <p>... if you have friends who may need to get access from you</p>
+    <div id='getOrShare' hidden?='{{2!==state}}'>
+      <div class='view'>
+        <h1>How would you like to start?</h1>
+        <!-- TODO: make get/share buttons actually set user modality -->
+        <paper-button raised class='getShareButton' on-tap='{{next}}'>
+          Get access
+        </paper-button>
+        <p>... if you need to get access from a friend</p>
+        <paper-button raised class='getShareButton' on-tap='{{next}}'>
+          Share access
+        </paper-button>
+        <p>... if you have friends who may need to get access from you</p>
+      </div>
+      <uproxy-faq-link anchor='GetOrGive'>
+        LEARN MORE ABOUT THESE
+      </uproxy-faq-link>
     </div>
 
-    <div id='nextWrapper'>
+    <div id='networks' hidden?='{{3!==state}}'>
+      <div class='view'>
+        <h1>Where can you find your contacts the quickest?</h1>
+        <p>Sign into a network to load your friends</p>
+        <template repeat='{{ n in networks }}' vertical layout>
+          <uproxy-network network='{{n}}'></uproxy-network>
+        </template>
+        <p style="margin-top: 0">
+          We won't share your data or post publicly without your consent
+        </p>
+      </div>
+      <uproxy-faq-link anchor='Privacy'>
+        LEARN MORE ABOUT PRIVACY
+      </uproxy-faq-link>
+    </div>
+
+    <div id='nextWrapper' hidden?='{{2==state || 3==state}}'>
       <paper-button raised on-tap='{{next}}'>Next</paper-button>
     </div>
 
