--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -41,12 +41,15 @@
       line-height: 32px;
       color: rgb(112, 112, 112);
     }
-    .userNameOrId {
+    .userInfoFirstLine {
       font-size: 16px;
+    }
+    .userInfoSecondLine {
+      font-size: 14px;
+      opacity: 0.54;
     }
     .networkName {
       padding-top: 0.5em;
-      padding-bottom: 0.5em;
       opacity: 0.54;
     }
     .userImage {
@@ -63,8 +66,14 @@
         <img class='userImage' hidden?='{{ui.onlineNetwork.imageData==null}}'
             src='{{ui.onlineNetwork.imageData}}'>
         <div class='networkName'>Connected with {{ui.onlineNetwork.name}}</div>
-        <div class='userNameOrId'>
-          {{ui.onlineNetwork.userName ? ui.onlineNetwork.userName : ui.onlineNetwork.userId}}
+        <!-- show userName and userId if both are available -->
+        <div hidden?='{{!ui.onlineNetwork.userName}}'>
+          <div class='userInfoFirstLine'>{{ui.onlineNetwork.userName}}</div>
+          <div class='userInfoSecondLine'>{{ui.onlineNetwork.userId}}</div>
+        </div>
+        <!-- otherwise show only userId -->
+        <div hidden?='{{ui.onlineNetwork.userName}}'>
+          <div class='userInfoFirstLine'>{{ui.onlineNetwork.userId}}</div>
         </div>
       </div>
       <uproxy-faq-link class='actionLink'>Get Help</uproxy-faq-link>
