Fix FAQ link clickability

--- a/src/generic_ui/polymer/faq-link.html
+++ b/src/generic_ui/polymer/faq-link.html
@@ -13,6 +13,9 @@ a new tab linking to faq.html#privacy
 
   <template>
     <style>
+      span {
+        cursor: pointer;
+      }
     </style>
 
     <span on-click='{{ openFaq }}'><content></content></span>
