Use enum for splash states

--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -33,9 +33,6 @@
       margin-left: 10%;
       padding-top: 100px;
       opacity: 1;
-      -webkit-transition: all 0.46s !important;
-      -moz-transition: all 0.46s !important;
-      transition: all 0.46s !important;
       z-index: 100;
     }
     .view[hidden] {
@@ -62,8 +59,9 @@
       width: 100%;
       padding-top: 1em;
       border-top: 1px solid #ddd;
+      text-transform: uppercase;
     }
-    .smiley {
+    .uproxy-logo {
       margin-bottom: 1em;
     }
     p {
@@ -80,11 +78,11 @@
     </style>
 
     <img src='../icons/arrow-left.png' on-tap='{{prev}}' class='prevArrow'
-        hidden?='{{0==ui.splashState}}'>
+        hidden?='{{SPLASH_STATES.INTRO==ui.splashState}}'>
 
-    <div id='intro1' hidden?='{{0!==ui.splashState}}'>
+    <div id='intro1' hidden?='{{SPLASH_STATES.INTRO!==ui.splashState}}'>
       <div class='view'>
-        <img class='smiley' src='../icons/smiley.png'>
+        <img class='uproxy-logo' src='../icons/smiley.png'>
         <h1>uProxy</h1>
         <p>
           uProxy helps you share your access to the internet or get internet
@@ -92,11 +90,11 @@
         </p>
       </div>
       <uproxy-faq-link anchor='LearnMore'>
-        LEARN MORE ABOUT UPROXY
+        Learn more about uProxy
       </uproxy-faq-link>
     </div>
 
-    <div id='description' hidden?='{{1!==ui.splashState}}'>
+    <div id='description' hidden?='{{SPLASH_STATES.DESCRIPTION!==ui.splashState}}'>
       <div class='view'>
         <h1>What name should others see when this device is online?</h1>
         <uproxy-description></uproxy-description>
@@ -108,7 +106,7 @@
       </div>
     </div>
 
-    <div id='getOrShare' hidden?='{{2!==ui.splashState}}'>
+    <div id='getOrShare' hidden?='{{SPLASH_STATES.GET_OR_SHARE!==ui.splashState}}'>
       <div class='view'>
         <h1>How would you like to start?</h1>
         <!-- TODO: make get/share buttons actually set user modality -->
@@ -122,11 +120,11 @@
         <p>... if you have friends who may need to get access from you</p>
       </div>
       <uproxy-faq-link anchor='GetOrGive'>
-        LEARN MORE ABOUT THESE
+        Learn more about these
       </uproxy-faq-link>
     </div>
 
-    <div id='networks' hidden?='{{3!==ui.splashState}}'>
+    <div id='networks' hidden?='{{SPLASH_STATES.NETWORKS!==ui.splashState}}'>
       <div class='view'>
         <h1>Where can you find your contacts the quickest?</h1>
         <p>Sign into a network to load your friends</p>
@@ -138,11 +136,12 @@
         </p>
       </div>
       <uproxy-faq-link anchor='Privacy'>
-        LEARN MORE ABOUT PRIVACY
+        Learn more about privacy
       </uproxy-faq-link>
     </div>
 
-    <div id='nextWrapper' hidden?='{{2==ui.splashState || 3==ui.splashState}}'>
+    <div id='nextWrapper'
+      hidden?='{{SPLASH_STATES.GET_OR_SHARE==ui.splashState || SPLASH_STATES.NETWORKS==ui.splashState}}'>
       <paper-button raised on-tap='{{next}}'>Next</paper-button>
     </div>
 
