--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -13,14 +13,14 @@
       box-sizing: border-box;
       height: 100%; width: 100%;
       text-align: center;
-      font-size: 14px;
+      font-size: 1.1em;
       right: -100%;
       right: 0px;
       z-index: 100;
       line-height: 24px;
     }
     h1 {
-      font-size: 18px;
+      font-size: 1.4em;
       color: #009688;  /* dark green */
       margin-bottom: 2em;
     }
@@ -74,6 +74,7 @@
       position: absolute;
       left: 8px;
       top: 8px;
+      cursor: pointer;
     }
     </style>
 
