--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -110,12 +110,11 @@
     <div id='getOrShare' hidden?='{{SPLASH_STATES.GET_OR_SHARE!==ui.splashState}}'>
       <div class='view'>
         <h1>How would you like to start?</h1>
-        <!-- TODO: make get/share buttons actually set user modality -->
-        <paper-button raised class='getShareButton' on-tap='{{next}}'>
+        <paper-button raised class='getShareButton' on-tap='{{setGetMode}}'>
           Get access
         </paper-button>
         <p>... if you need to get access from a friend</p>
-        <paper-button raised class='getShareButton' on-tap='{{next}}'>
+        <paper-button raised class='getShareButton' on-tap='{{setShareMode}}'>
           Share access
         </paper-button>
         <p>... if you have friends who may need to get access from you</p>
