Small CSS change

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -75,7 +75,7 @@
       .getShareTab {
         position: absolute;
         bottom: 0px;
-        padding-bottom: 1em;
+        padding-bottom: 15px;
         width: 30%;
         margin-left: 10%;
         text-align: center;
@@ -87,8 +87,8 @@
       }
       .getShareTab.active {
         opacity: 1.0;
-        border-bottom: 0.2em solid #20F1DE;  /* teal */
-        padding-bottom: 0.8em;
+        border-bottom: 3px solid #20F1DE;  /* teal */
+        padding-bottom: 12px;  /* normal padding-bottom - border size */
       }
       #shareTab {
         left: 50%;
