--- a/src/chrome/app/uproxy.html
+++ b/src/chrome/app/uproxy.html
@@ -2,19 +2,9 @@
   <head>
     <title>uProxy - APP</title>
     <script type='text/javascript' src='scripts/uproxy.js'></script>
-    <script type='text/javascript' src='scripts/manual_dialog.js'></script>
     <script type='text/javascript' src='scripts/view_oauth.js'></script>
     <script type='text/javascript' src='scripts/chrome_glue.js'></script>
-    <script type='text/javascript' src='scripts/freedom-config.js'></script>
-    <script type='text/javascript' src='lib/uproxy-core-env.js'></script>
-    <script src='lib/freedom-for-chrome-for-uproxy.js'
-            data-manifest='scripts/freedom-module.json'>
-      {
-        "strongIsolation": true,
-        "stayLocal": true,
-        "debug": "log"
-      }
-    </script>
+    <script src='lib/freedom-for-chrome.js'></script>
     <script type='text/javascript' src='scripts/plumbing.js'></script>
   </head>
   <body>
