--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../lib/polymer/polymer.html">
-<link rel="import" href="../lib/paper-paper-button raised/paper-paper-button raised.html">
+<link rel="import" href="../lib/paper-button/paper-button.html">
 
-<polymer-element name='uproxy-instance' attributes='userId, instance, network'>
+<polymer-element name='uproxy-instance' attributes='user, instance, network'>
   <template>
     <style>
     :host {
@@ -9,15 +9,23 @@
       border-top: 1px solid #ddd;
     }
     paper-button {
-      background: #009688;  /* dark green */
-      color: white;
+      background: #ddd;
+      color: rgb(112, 112, 112);
       font-size: 1em;
       padding-left: 1em;
       padding-right: 1em;
     }
+    #startGettingButton, #acceptOfferButton, #declineOfferButton,
+    #askForAccessButton, #grantButton, #ignoreButton, #offerAccessButton {
+      background: #009688;  /* dark green */
+      color: white;
+    }
     p {
       margin-top: 1em;
       color: #888;
+    }
+    p.highlighted {
+      color: #009688;  /* dark green */
     }
     #description {
       color: #333;
@@ -40,13 +48,14 @@
     <div id='getControls' hidden?='{{ui.mode!=UI.Mode.GET}}'>
 
       <div hidden?='{{ !( getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal ) }}'>
-        <paper-button raised hidden?='{{ instance.access.asProxy }}' on-tap='{{ start }}'>
+        <p class='highlighted'>{{user.name || user.userId }} has granted you access</p>
+        <paper-button id='startGettingButton' raised
+            hidden?='{{ instance.access.asProxy }}' on-tap='{{ start }}'>
           Start getting access
         </paper-button>
         <paper-button raised hidden?='{{ !instance.access.asProxy }}' on-tap='{{ stop }}'>
           Stop getting access
         </paper-button>
-        <p>You have access.</p>
       </div>
 
       <div hidden?='{{ !( getConsentState().localRequestsAccessFromRemote && !getConsentState().remoteGrantsAccessToLocal ) }}'>
@@ -57,8 +66,8 @@
       </div>
 
       <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal && !getConsentState().ignoringRemoteUserOffer ) }}'>
-        <paper-button raised on-tap='{{ request }}'>Accept Offer</paper-button>
-        <paper-button raised on-tap='{{ ignoreOffer }}'>Decline</paper-button>
+        <paper-button id='acceptOfferButton' raised on-tap='{{ request }}'>Accept Offer</paper-button>
+        <paper-button id='declineOfferButton' raised on-tap='{{ ignoreOffer }}'>Decline</paper-button>
         <p>They've offered you access.</p>
       </div>
 
@@ -68,7 +77,7 @@
       </div>
 
       <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && !getConsentState().remoteGrantsAccessToLocal ) }}'>
-        <paper-button raised on-tap='{{ request }}'>
+        <paper-button raised id='askForAccessButton' on-tap='{{ request }}'>
           Ask for access
         </paper-button>
       </div>
@@ -87,8 +96,8 @@
       </div>
 
       <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal && !getConsentState().ignoringRemoteUserRequest ) }}'>
-        <paper-button raised on-tap='{{ offer }}'>Grant</paper-button>
-        <paper-button raised on-tap='{{ ignoreRequest }}'>Ignore</paper-button>
+        <paper-button raised id='grantButton' on-tap='{{ offer }}'>Grant</paper-button>
+        <paper-button raised id='ignoreButton' on-tap='{{ ignoreRequest }}'>Ignore</paper-button>
         <p>They requested access through you.</p>
       </div>
 
@@ -98,7 +107,7 @@
       </div>
 
       <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && !getConsentState().remoteRequestsAccessFromLocal ) }}'>
-        <paper-button raised on-tap='{{ offer }}'>Offer Access</paper-button>
+        <paper-button raised id='offerAccessButton' on-tap='{{ offer }}'>Offer Access</paper-button>
         <p>You have not granted them access.</p>
       </div>
 
