Slightly lighter status bar background

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -103,7 +103,7 @@
       }
       .statusRow {
         height: 3em;
-        background-color: black;
+        background-color: #333;
       }
       .statusText {
         color: white;
