--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../lib/polymer/polymer.html">
-<link rel="import" href="../lib/paper-paper-button raised/paper-paper-button raised.html">
+<link rel="import" href="../lib/paper-button/paper-button.html">
 
 <polymer-element name='uproxy-instance' attributes='userId, instance, network'>
   <template>
