--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -1,4 +1,7 @@
 <link rel="import" href="../lib/polymer/polymer.html">
+<link rel='import' href='../lib/paper-button/paper-button.html'>
+<link rel='import' href='../lib/paper-input/paper-input-decorator.html'>
+<link rel='import' href='../lib/core-icons/core-icons.html'>
 <link rel="import" href='description.html'>
 <link rel="import" href='faq-link.html'>
 
@@ -58,6 +61,22 @@
       border-radius: 50%;
       margin-left: -6px;
     }
+    paper-button {
+      background: #009688;  /* dark green */
+      color: white;
+      width: 70px;
+    }
+    paper-input-decorator {
+      max-width: 60%;
+    }
+    paper-input-decorator /deep/ .unfocused-underline,
+    paper-input-decorator /deep/ .focused-underline,
+    paper-input-decorator /deep/ .cursor {
+        background-color: #009688;
+    }
+    core-icon {
+      height: 12px;
+    }
     #advancedSettings {
       padding-left: 32px;
     }
@@ -83,9 +102,16 @@
           <div class='userInfoIDWithoutName'>{{ui.onlineNetwork.userId}}</div>
         </div>
       </div>
-      <div class='actionLink' on-tap='{{toggleAdvancedSettings}}'>Advanced Settings</div>
-      <div id='advancedSettings' hidden?='{{!advancedSettings}}'>
-        <input placeholder='Custom STUN server' value='{{stunServer}}' size='30'></input> <button on-click="{{setStunServer}}">Update</button><br><br>
+      <div class='actionLink' on-tap='{{toggleAdvancedSettings}}'>
+        Advanced Settings
+        <core-icon icon="expand-more" hidden?='{{displayAdvancedSettings}}'></core-icon>
+        <core-icon icon="expand-less" hidden?='{{!displayAdvancedSettings}}'></core-icon>
+      </div>
+      <div id='advancedSettings' hidden?='{{!displayAdvancedSettings}}'>
+        <paper-input-decorator label="Custom STUN server">
+          <input is="core-input" value='{{stunServer}}'>
+        </paper-input-decorator>
+         <paper-button on-tap="{{setStunServer}}">Update</paper-button><br><br>
         <p id='confirmNewServer' hidden>STUN server updated. New server will be used for future connections.</p>
       </div>
       <uproxy-faq-link class='actionLink'>Get Help</uproxy-faq-link>
