--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -20,16 +20,14 @@
         color: rgb(112, 112, 112);
       }
       #toolbar {
-        /*position: absolute;
-        top: 0; left: 0;*/
         display: table-row;
         height: 100px; width: 100%;
         background-color: #009688;
-        /*z-index: 1000;*/
       }
       #btnSettings {
         position: absolute;
-        left: 20px; top: 20px;  /* (50px - 28px) / 2 */
+        left: 20px;
+        top: 20px;
         opacity: 0.6;
         cursor: pointer;
         -webkit-user-select: none;
