--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -15,7 +15,7 @@
       color: #888;
       outline: none;
       border: none;
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid rgb(221, 221, 221);
       -webkit-transition: all 0.23s !important;
       -moz-transition: all 0.23s !important;
       transition: all 0.23s !important;
