--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -4,7 +4,7 @@
 <head>
   <title>uProxy polymer UI</title>
   <meta name='viewport' content='width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes'>
-  <script src='../lib/lodash/dist/lodash.compat.js'></script>
+  <script src='../lib/webcomponentsjs/webcomponents.js'></script>
 
   <script src='../scripts/ui.js'></script>
   <script src='../scripts/uproxy.js'></script>
