--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -5,13 +5,16 @@
   <template>
     <style>
     :host {
-      display: block; padding: 8px;
+      display: block;
+      padding-top: 8px;
+      padding-bottom: 8px;
       border-top: 1px solid rgb(221, 221, 221);
     }
     paper-button {
       background: rgb(221, 221, 221);
       color: rgb(112, 112, 112);
       font-size: 1em;
+      margin-left: 0px;
       padding-left: 1em;
       padding-right: 1em;
     }
@@ -19,22 +22,28 @@
       background: #009688;  /* dark green */
       color: white;
     }
-    p {
-      margin-top: 1em;
+    p.preButtonText {
+      margin-top: 8px;
       color: #888;
     }
     p.highlighted {
+      margin-top: 8px;
       color: #009688;  /* dark green */
     }
     #description {
       color: #333;
-      margin-left: -1em;
     }
     #getControls {
-      margin-top: 1em;
+      margin-top: 8px;
     }
     #shareControls {
-      margin-top: 1em;
+      margin-top: 8px;
+    }
+    p.askingText {
+      margin-bottom: 0;
+    }
+    p.askingText img {
+      vertical-align: bottom;
     }
     </style>
 
@@ -47,7 +56,9 @@
     <div id='getControls' hidden?='{{ui.mode!=UI.Mode.GET}}'>
 
       <div hidden?='{{ !( getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal ) }}'>
-        <p class='highlighted'>{{user.name || user.userId }} has granted you access</p>
+        <p class='highlighted'>
+          <img src='../icons/checkmark.png'> {{user.name || user.userId }} has granted you access
+        </p>
         <paper-button class='highlightedButton' raised
             hidden?='{{ instance.access.asProxy }}' on-tap='{{ start }}'>
           Start getting access
@@ -58,21 +69,20 @@
       </div>
 
       <div hidden?='{{ !( getConsentState().localRequestsAccessFromRemote && !getConsentState().remoteGrantsAccessToLocal ) }}'>
-        <paper-button raised on-tap='{{ cancelRequest }}'>
-          Cancel Request
-        </paper-button>
-        <p>Waiting for permission... </p>
+        <p class='preButtonText askingText'><img src='../icons/clock.png'> Asking for access</p>
+        <p class='preButtonText'>You will be able to get access when they accept.</p>
+        <paper-button raised on-tap='{{ cancelRequest }}'>Cancel Request</paper-button>
       </div>
 
       <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal && !getConsentState().ignoringRemoteUserOffer ) }}'>
+        <p class='preButtonText'>They've offered you access.</p>
         <paper-button class='highlightedButton' raised on-tap='{{ request }}'>Accept Offer</paper-button>
         <paper-button class='highlightedButton' raised on-tap='{{ ignoreOffer }}'>Decline</paper-button>
-        <p>They've offered you access.</p>
       </div>
 
       <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal && getConsentState().ignoringRemoteUserOffer ) }}'>
+        <p class='preButtonText'>They've offered you access.</p>
         <paper-button raised on-tap='{{ unignoreOffer }}'>Stop ignoring offers</paper-button>
-        <p>They've offered you access.</p>
       </div>
 
       <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && !getConsentState().remoteGrantsAccessToLocal ) }}'>
@@ -86,8 +96,8 @@
     <div id='shareControls' hidden?='{{ui.mode!=UI.Mode.SHARE}}'>
 
       <div hidden?='{{ !( getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal ) }}'>
+        <p class='preButtonText'>You've given them access.</p>
         <paper-button raised on-tap='{{ cancelOffer }}'>Revoke Access</paper-button>
-        <p>You've given them access.</p>
       </div>
 
       <div hidden?='{{ !( getConsentState().localGrantsAccessToRemote && !getConsentState().remoteRequestsAccessFromLocal ) }}'>
@@ -95,19 +105,19 @@
       </div>
 
       <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal && !getConsentState().ignoringRemoteUserRequest ) }}'>
+        <p class='preButtonText'>They requested access through you.</p>
         <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Grant</paper-button>
         <paper-button raised class='highlightedButton' on-tap='{{ ignoreRequest }}'>Ignore</paper-button>
-        <p>They requested access through you.</p>
       </div>
 
       <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal && getConsentState().ignoringRemoteUserRequest ) }}'>
+        <p class='preButtonText'>They requested access through you.</p>
         <paper-button raised on-tap='{{ unignoreRequest }}'>Stop ignoring requests</paper-button>
-        <p>They requested access through you.</p>
       </div>
 
       <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && !getConsentState().remoteRequestsAccessFromLocal ) }}'>
+        <p class='preButtonText'>You have not granted them access.</p>
         <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Offer Access</paper-button>
-        <p>You have not granted them access.</p>
       </div>
 
     </div>
