--- a/src/chrome/app/uproxy.html
+++ b/src/chrome/app/uproxy.html
@@ -2,7 +2,7 @@
   <head>
     <title>uProxy - APP</title>
     <script type='text/javascript' src='scripts/uproxy.js'></script>
-    <script type='text/javascript' src='scripts/view_oauth.js'></script>
+    <script type='text/javascript' src='scripts/chrome_oauth.js'></script>
     <script type='text/javascript' src='scripts/chrome_glue.js'></script>
     <script src='lib/freedom-for-chrome.js'></script>
     <script type='text/javascript' src='scripts/plumbing.js'></script>
