--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -31,6 +31,24 @@
 
     <input type='text' id='search' placeholder='Search' value='{{ searchQuery }}'></input>
 
+    <!-- uProxy contacts offering access to user -->
+    <uproxy-roster-group
+        groupTitle='Friends offering you access'
+        onlineContacts='{{ onlineOfferingYouAccess }}'
+        offlineContacts='{{ offlineOfferingYouAccess }}'
+        searchQuery='{{ searchQuery }}'></uproxy-roster-group>
+
+    <!-- uProxy contacts requesting access from user -->
+    <uproxy-roster-group
+        groupTitle='Friends requesting access from you'
+        onlineContacts='{{ onlineRequestingAccessFromYou }}'
+        offlineContacts='{{ offlineRequestingAccessFromYou }}'
+        searchQuery='{{ searchQuery }}'></uproxy-roster-group>
+
+    <!-- Hide HR above Trusted if there are no Trusted contacts, or if there are no Pending contacts -->
+    <hr color="#eee"
+        hidden?='{{ ((onlineOfferingYouAccess.length == 0 && offlineOfferingYouAccess.length == 0) && (onlineRequestingAccessFromYou.length == 0 && offlineRequestingAccessFromYou.length == 0)) || (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) }}'></hr>
+
     <!-- trusted uProxy contacts -->
     <uproxy-roster-group
         groupTitle='Trusted uProxy Friends'
@@ -38,9 +56,9 @@
         offlineContacts='{{ offlineTrustedUproxyContacts }}'
         searchQuery='{{ searchQuery }}'></uproxy-roster-group>
 
-    <!-- Hide HR between Trusted and Untrusted if either group is completely empty -->
+    <!-- Hide HR above Untrusted if there are no Untrusted contacts, or if there are no Trusted & Pending contacts -->
     <hr color="#eee"
-        hidden?='{{ (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) || (onlineUntrustedUproxyContacts.length == 0 && offlineUntrustedUproxyContacts.length == 0) }}'></hr>
+        hidden?='{{ (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) || ((onlineUntrustedUproxyContacts.length == 0 && offlineUntrustedUproxyContacts.length == 0) && (onlineOfferingYouAccess.length == 0 && offlineOfferingYouAccess.length == 0) && (onlineRequestingAccessFromYou.length == 0 && offlineRequestingAccessFromYou.length == 0))  }}'></hr>
 
     <!-- untrusted uProxy contacts -->
     <uproxy-roster-group
@@ -49,9 +67,9 @@
         offlineContacts='{{ offlineUntrustedUproxyContacts }}'
         searchQuery='{{ searchQuery }}'></uproxy-roster-group>
 
-    <!-- hide hr if there are no non-uproxy contacts, or if there are only non-uProxy contacts -->
+    <!-- Hide HR if there are no Non-uProxy contacts, or if there are only Non-uProxy contacts -->
     <hr color="#eee"
-        hidden?='{{ (onlineNonUproxyContacts.length == 0 && offlineNonUproxyContacts.length == 0) || ((onlineUntrustedUproxyContacts.length == 0 && offlineUntrustedUproxyContacts.length == 0) && (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0)) }}'></hr>
+        hidden?='{{ (onlineNonUproxyContacts.length == 0 && offlineNonUproxyContacts.length == 0) || ((onlineUntrustedUproxyContacts.length == 0 && offlineUntrustedUproxyContacts.length == 0) && (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) && (onlineOfferingYouAccess.length == 0 && offlineOfferingYouAccess.length == 0) && (onlineRequestingAccessFromYou.length == 0 && offlineRequestingAccessFromYou.length == 0)) }}'></hr>
 
     <!-- non uProxy contacts -->
     <uproxy-roster-group
