Comments + CSS edit.

--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -79,6 +79,7 @@
     }
     #advancedSettings {
       padding-left: 32px;
+      padding-right: 32px;
     }
     .advancedSettingsText {
       font-size: 12px;
