Edit STUN server confirmation text.

--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -83,7 +83,7 @@
     }
     .advancedSettingsText {
       font-size: 12px;
-      color: red;
+      color: rgb(112, 112, 112);
     }
 
     </style>
